modified:   GISDesign_ZY/DrawSymbol.cs 	modified:   GISDesign_ZY/GISDesign_ZY.csproj 	new file:   GISDesign_ZY/MapControl.cs 	new file:   GISDesign_ZY/MapControl.designer.cs 	new file:   GISDesign_ZY/MapControl.resx 	modified:   GISDesign_ZY/MapManager.cs 	modified:   GISDesign_ZY/Properties/Resources.Designer.cs 	modified:   GISDesign_ZY/Properties/Resources.resx 	modified:   GISDesign_ZY/Renderers/Renderer.cs 	new file:   GISDesign_ZY/Resources/Cross.ico 	new file:   GISDesign_ZY/Resources/PanUp.ico 	new file:   GISDesign_ZY/Resources/ZoomIn.ico 	new file:   GISDesign_ZY/Resources/ZoomOut.ico 	new file:   GISDesign_ZY/icon/Cross.ico 	new file:   GISDesign_ZY/icon/PanUp.ico 	new file:   GISDesign_ZY/icon/ZoomIn.ico 	new file:   GISDesign_ZY/icon/ZoomOut.ico 	modified:   GISDesign_ZY/winForms/mainForm.cs 	modified:   GISDesign_ZY/winForms/mainForm.designer.cs 	modified:   GISDesign_ZY/winForms/mainForm.resx

--- a/GISDesign_ZY/GISDesign_ZY.csproj
+++ b/GISDesign_ZY/GISDesign_ZY.csproj
@@ -113,6 +113,12 @@
     <Compile Include="winForms\LayerProperties.Designer.cs">
       <DependentUpon>LayerProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="MapControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MapControl.designer.cs">
+      <DependentUpon>MapControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="winForms\selectByAttribute.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,9 +148,13 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="winForms\LayerProperties.resx">
       <DependentUpon>LayerProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MapControl.resx">
+      <DependentUpon>MapControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="winForms\selectByAttribute.resx">
       <DependentUpon>selectByAttribute.cs</DependentUpon>
@@ -165,6 +175,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="icon\Cross.ico" />
     <Content Include="icon\cross.png" />
     <Content Include="icon\Dot.png" />
     <Content Include="icon\FColor.png" />
@@ -183,6 +194,13 @@
     <Content Include="icon\MSolidRectengle.png" />
     <Content Include="icon\MSolidTriangle.png" />
     <Content Include="icon\MTriangle.png" />
+    <Content Include="icon\PanUp.ico" />
+    <Content Include="icon\ZoomIn.ico" />
+    <Content Include="icon\ZoomOut.ico" />
+    <EmbeddedResource Include="Resources\ZoomOut.ico" />
+    <EmbeddedResource Include="Resources\ZoomIn.ico" />
+    <EmbeddedResource Include="Resources\PanUp.ico" />
+    <EmbeddedResource Include="Resources\Cross.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
