添加了地图文件，请使用仓库中的地图

--- a/GISDesign_ZY/GISDesign_ZY.csproj
+++ b/GISDesign_ZY/GISDesign_ZY.csproj
@@ -200,6 +200,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="地图\map.dbf" />
+    <None Include="地图\map.shp" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon\Cross.ico" />
