modified:   GISDesign_ZY/GISDesign_ZY.csproj 	modified:   GISDesign_ZY/GeoBasicClass.cs 	modified:   GISDesign_ZY/GeoDataIO.cs 	modified:   GISDesign_ZY/GeoRecordset.cs 	modified:   GISDesign_ZY/LabelRenderer/LabelRenderer.cs 	modified:   GISDesign_ZY/Layer.cs 	modified:   GISDesign_ZY/MapManager.cs 	new file:   GISDesign_ZY/ObjToString.cs 	modified:   GISDesign_ZY/Projection/Projection.cs 	modified:   GISDesign_ZY/Renderers/Renderer.cs 	modified:   GISDesign_ZY/Renderers/Symbol.cs 	modified:   "GISDesign_ZY/shp\350\257\273\345\217\226/FeatureClass.cs" 	modified:   "GISDesign_ZY/shp\350\257\273\345\217\226/PointFeature.cs" 	modified:   "GISDesign_ZY/shp\350\257\273\345\217\226/PolygonFeature.cs" 	modified:   "GISDesign_ZY/shp\350\257\273\345\217\226/PolylineFeature.cs" 	modified:   GISDesign_ZY/winForms/LayerProperties.cs 	modified:   GISDesign_ZY/winForms/addLayer.cs 	modified:   GISDesign_ZY/winForms/addLayer.designer.cs 	modified:   GISDesign_ZY/winForms/mainForm.cs 	modified:   GISDesign_ZY/winForms/mainForm.designer.cs 	modified:   GISDesign_ZY/winForms/mainForm.resx

--- a/GISDesign_ZY/GISDesign_ZY.csproj
+++ b/GISDesign_ZY/GISDesign_ZY.csproj
@@ -74,6 +74,7 @@
     <Compile Include="GeoRecordset.cs" />
     <Compile Include="LabelRenderer\LabelRenderer.cs" />
     <Compile Include="Layer.cs" />
+    <Compile Include="ObjToString.cs" />
     <Compile Include="winForms\AddFeatureFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +86,12 @@
     </Compile>
     <Compile Include="winForms\addField.designer.cs">
       <DependentUpon>addField.cs</DependentUpon>
+    </Compile>
+    <Compile Include="winForms\addLayer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="winForms\addLayer.designer.cs">
+      <DependentUpon>addLayer.cs</DependentUpon>
     </Compile>
     <Compile Include="winForms\attributeList.cs">
       <SubType>Form</SubType>
@@ -154,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="winForms\addField.resx">
       <DependentUpon>addField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="winForms\addLayer.resx">
+      <DependentUpon>addLayer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="winForms\attributeList.resx">
       <DependentUpon>attributeList.cs</DependentUpon>
