modified:   GISDesign_ZY/GISDesign_ZY.csproj 	modified:   GISDesign_ZY/GeoDataIO.cs 	new file:   GISDesign_ZY/Label/Label.cs 	modified:   GISDesign_ZY/MapControl.cs 	modified:   GISDesign_ZY/MapControl.designer.cs 	modified:   GISDesign_ZY/MapControl.resx 	modified:   GISDesign_ZY/Renderers/RandomColorRampClass.cs 	modified:   GISDesign_ZY/Renderers/Renderer.cs 	modified:   GISDesign_ZY/winForms/LayerProperties.cs 	modified:   GISDesign_ZY/winForms/mainForm.cs 	modified:   GISDesign_ZY/winForms/mainForm.designer.cs 	modified:   GISDesign_ZY/winForms/mainForm.resx

--- a/GISDesign_ZY/GISDesign_ZY.csproj
+++ b/GISDesign_ZY/GISDesign_ZY.csproj
@@ -73,6 +73,7 @@
     <Compile Include="GeoDataIO.cs" />
     <Compile Include="GeoRecordset.cs" />
     <Compile Include="LabelRenderer\LabelRenderer.cs" />
+    <Compile Include="Label\Label.cs" />
     <Compile Include="Layer.cs" />
     <Compile Include="ObjToString.cs" />
     <Compile Include="winForms\AddFeatureFrm.cs">
