--- a/GISDesign_ZY/GISDesign_ZY.csproj
+++ b/GISDesign_ZY/GISDesign_ZY.csproj
@@ -100,6 +100,12 @@
     <Compile Include="winForms\attributeList.designer.cs">
       <DependentUpon>attributeList.cs</DependentUpon>
     </Compile>
+    <Compile Include="winForms\delField.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="winForms\delField.Designer.cs">
+      <DependentUpon>delField.cs</DependentUpon>
+    </Compile>
     <Compile Include="winForms\IdentifyResultForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -174,6 +180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="winForms\attributeList.resx">
       <DependentUpon>attributeList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="winForms\delField.resx">
+      <DependentUpon>delField.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="winForms\IdentifyResultForm.resx">
       <DependentUpon>IdentifyResultForm.cs</DependentUpon>
